PUBMAN-2608 fixed: The name of login user is covered by overlay QA, and Logout overlap the overlay QA

--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/appearance.css
@@ -284,8 +284,9 @@ body .wrapper {
 	color:#FFFFFF;
 }
 .metaMenu .seperator {
-    background-color: transparent;
+    background-color: #7CADB4;
 	border-color: transparent;
+	max-height: 0.363636em;
 }
 /*META MENU - CUSTOMIZED SELECTBOX*/
 .metaMenu .selectContainer select {
